// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Double slider > handles correctly onChange double 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 220px;
  max-width: 640px;
}

.emotion-0[data-options="true"] {
  margin-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 60px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.emotion-11:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-11[data-success='true'] {
  border-color: #22674e;
}

.emotion-11[data-error='true'] {
  border-color: #b3144d;
}

.emotion-11:hover {
  border-color: #792dd4;
}

.emotion-11[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
  cursor: not-allowed;
}

.emotion-11[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-11[data-controls='false']>.emotion-13 {
  border-width: 0;
}

.emotion-14 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: inherit;
  background: inherit;
  width: 100%;
}

.emotion-16 {
  outline: none;
  border: none;
  padding: 0;
  width: 100%;
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: Regular;
  line-height: 24px;
  text-align: center;
  padding: 8px;
  background: none;
}

.emotion-16[data-has-unit='true'] {
  text-align: left;
  padding: 8px 0 8px 8px;
}

.emotion-16::-webkit-outer-spin-button,
.emotion-16::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-16 {
  -moz-appearance: textfield;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  -ms-appearance: textfield;
  appearance: textfield;
}

.emotion-16[data-size='small'] {
  height: 30px;
}

.emotion-16[data-size='medium'] {
  height: 38px;
}

.emotion-16[data-size='large'] {
  height: 46px;
  font-size: 16px;
}

.emotion-16:-moz-read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.emotion-16:read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.emotion-16:-moz-read-only~.e1b9qdjy2 {
  background: #f9f9fa;
}

.emotion-16:read-only~.e1b9qdjy2 {
  background: #f9f9fa;
}

.emotion-16:disabled {
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-16:disabled~.e1b9qdjy2 {
  background: #f3f3f4;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-16:placeholder-shown~.e1b9qdjy2 {
  color: #727683;
}

.emotion-16[data-controls='false'] {
  text-align: left;
}

.emotion-28 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 16px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-30 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 8px;
  width: 100%;
  min-width: 220px;
  border-radius: 4px;
  background: #e9eaeb;
}

.emotion-32 {
  position: absolute;
  height: 100%;
  background-color: #8c40ef;
  border-radius: 4px;
}

.emotion-32[data-error='true'] {
  background-color: #e51963;
}

.emotion-32[aria-disabled='true'] {
  background-color: #d8c5fc;
}

.emotion-34 {
  position: absolute;
  width: 100%;
  pointer-events: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 100%;
  opacity: 1;
  padding: 0;
  background: transparent;
  outline: none;
}

.emotion-34:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-34:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-34[data-tooltip = "true"] {
  margin-top: -8px;
}

.emotion-34::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-34::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}

.emotion-34::-moz-range-thumb:hover,
.emotion-34::-moz-range-thumb:active,
.emotion-34::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-34::-moz-range-thumb:active,
.emotion-34::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-34::-ms-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-34:focus::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-34::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}

.emotion-34::-webkit-slider-thumb:hover,
.emotion-34::-webkit-slider-thumb:active,
.emotion-34::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-34::-webkit-slider-thumb:active,
.emotion-34::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-options="false"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-3"
        >
          <div
            class="emotion-6 emotion-3"
          >
            <div
              class="emotion-8 emotion-9 emotion-3"
            >
              <div>
                <div
                  class="emotion-11 emotion-12"
                  data-controls="false"
                  data-disabled="false"
                  data-error="false"
                  data-success="false"
                  data-unit="false"
                >
                  <div
                    class="emotion-13 emotion-14 emotion-15"
                  >
                    <input
                      aria-label="input-left"
                      class="emotion-16 emotion-17"
                      data-controls="false"
                      data-has-unit="false"
                      data-size="small"
                      data-testid="slider-input-left"
                      id=":r1:"
                      max="74"
                      min="0"
                      placeholder=""
                      step="1"
                      type="number"
                      value="3"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-8 emotion-9 emotion-3"
            >
              <div>
                <div
                  class="emotion-11 emotion-12"
                  data-controls="false"
                  data-disabled="false"
                  data-error="false"
                  data-success="false"
                  data-unit="false"
                >
                  <div
                    class="emotion-13 emotion-14 emotion-15"
                  >
                    <input
                      aria-label="input-right"
                      class="emotion-16 emotion-17"
                      data-controls="false"
                      data-has-unit="false"
                      data-size="small"
                      data-testid="slider-input-right"
                      id=":r3:"
                      max="100"
                      min="36"
                      placeholder=""
                      step="1"
                      type="number"
                      value="75"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-28 emotion-29"
          >
            <div
              class="emotion-30 emotion-31"
            >
              <div
                aria-disabled="false"
                class="emotion-32 emotion-33"
                data-error="false"
                style="left: 35%; right: 25%;"
              />
            </div>
            <input
              aria-label="slider"
              class="emotion-34 emotion-35"
              data-direction="column"
              data-testid="slider-left"
              data-tooltip="false"
              id=":r0:"
              max="100"
              min="0"
              name="slider"
              step="1"
              type="range"
              value="35"
            />
            <input
              aria-label="slider"
              class="emotion-34 emotion-35"
              data-direction="column"
              data-testid="slider-right"
              data-tooltip="false"
              id=":r0:"
              max="100"
              min="0"
              name="slider"
              step="1"
              type="range"
              value="75"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Double slider > handles correctly onChange with min and max double 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 220px;
  max-width: 640px;
}

.emotion-0[data-options="true"] {
  margin-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 60px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.emotion-11:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-11[data-success='true'] {
  border-color: #22674e;
}

.emotion-11[data-error='true'] {
  border-color: #b3144d;
}

.emotion-11:hover {
  border-color: #792dd4;
}

.emotion-11[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
  cursor: not-allowed;
}

.emotion-11[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-11[data-controls='false']>.emotion-13 {
  border-width: 0;
}

.emotion-14 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: inherit;
  background: inherit;
  width: 100%;
}

.emotion-16 {
  outline: none;
  border: none;
  padding: 0;
  width: 100%;
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: Regular;
  line-height: 24px;
  text-align: center;
  padding: 8px;
  background: none;
}

.emotion-16[data-has-unit='true'] {
  text-align: left;
  padding: 8px 0 8px 8px;
}

.emotion-16::-webkit-outer-spin-button,
.emotion-16::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-16 {
  -moz-appearance: textfield;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  -ms-appearance: textfield;
  appearance: textfield;
}

.emotion-16[data-size='small'] {
  height: 30px;
}

.emotion-16[data-size='medium'] {
  height: 38px;
}

.emotion-16[data-size='large'] {
  height: 46px;
  font-size: 16px;
}

.emotion-16:-moz-read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.emotion-16:read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.emotion-16:-moz-read-only~.e1b9qdjy2 {
  background: #f9f9fa;
}

.emotion-16:read-only~.e1b9qdjy2 {
  background: #f9f9fa;
}

.emotion-16:disabled {
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-16:disabled~.e1b9qdjy2 {
  background: #f3f3f4;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-16:placeholder-shown~.e1b9qdjy2 {
  color: #727683;
}

.emotion-16[data-controls='false'] {
  text-align: left;
}

.emotion-28 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 16px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-30 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 8px;
  width: 100%;
  min-width: 220px;
  border-radius: 4px;
  background: #e9eaeb;
}

.emotion-32 {
  position: absolute;
  height: 100%;
  background-color: #8c40ef;
  border-radius: 4px;
}

.emotion-32[data-error='true'] {
  background-color: #e51963;
}

.emotion-32[aria-disabled='true'] {
  background-color: #d8c5fc;
}

.emotion-34 {
  position: absolute;
  width: 100%;
  pointer-events: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 100%;
  opacity: 1;
  padding: 0;
  background: transparent;
  outline: none;
}

.emotion-34:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-34:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-34[data-tooltip = "true"] {
  margin-top: -8px;
}

.emotion-34::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-34::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}

.emotion-34::-moz-range-thumb:hover,
.emotion-34::-moz-range-thumb:active,
.emotion-34::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-34::-moz-range-thumb:active,
.emotion-34::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-34::-ms-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-34:focus::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-34::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}

.emotion-34::-webkit-slider-thumb:hover,
.emotion-34::-webkit-slider-thumb:active,
.emotion-34::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-34::-webkit-slider-thumb:active,
.emotion-34::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-options="false"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-3"
        >
          <div
            class="emotion-6 emotion-3"
          >
            <div
              class="emotion-8 emotion-9 emotion-3"
            >
              <div>
                <div
                  class="emotion-11 emotion-12"
                  data-controls="false"
                  data-disabled="false"
                  data-error="false"
                  data-success="false"
                  data-unit="false"
                >
                  <div
                    class="emotion-13 emotion-14 emotion-15"
                  >
                    <input
                      aria-label="input-left"
                      class="emotion-16 emotion-17"
                      data-controls="false"
                      data-has-unit="false"
                      data-size="small"
                      data-testid="slider-input-left"
                      id=":r8:"
                      max="9"
                      min="2"
                      placeholder=""
                      step="1"
                      type="number"
                      value="2"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-8 emotion-9 emotion-3"
            >
              <div>
                <div
                  class="emotion-11 emotion-12"
                  data-controls="false"
                  data-disabled="false"
                  data-error="false"
                  data-success="false"
                  data-unit="false"
                >
                  <div
                    class="emotion-13 emotion-14 emotion-15"
                  >
                    <input
                      aria-label="input-right"
                      class="emotion-16 emotion-17"
                      data-controls="false"
                      data-has-unit="false"
                      data-size="small"
                      data-testid="slider-input-right"
                      id=":ra:"
                      max="10"
                      min="3"
                      placeholder=""
                      step="1"
                      type="number"
                      value="10"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-28 emotion-29"
          >
            <div
              class="emotion-30 emotion-31"
            >
              <div
                aria-disabled="false"
                class="emotion-32 emotion-33"
                data-error="false"
                style="left: 0%; right: 0%;"
              />
            </div>
            <input
              aria-label="slider"
              class="emotion-34 emotion-35"
              data-direction="column"
              data-testid="slider-left"
              data-tooltip="false"
              id=":r7:"
              max="10"
              min="2"
              name="slider"
              step="1"
              type="range"
              value="2"
            />
            <input
              aria-label="slider"
              class="emotion-34 emotion-35"
              data-direction="column"
              data-testid="slider-right"
              data-tooltip="false"
              id=":r7:"
              max="10"
              min="2"
              name="slider"
              step="1"
              type="range"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
